# counterfacts-baseline-purple-agent

./: .env.example  README.md  pyproject.toml
src/: agent.py  agent_wrapper.py  executor.py  server.py
src/tools/: base_tool.py  code_execution_tool.py  deep_research_tool.py  deep_research_utils.py  deer_flow_tool.py  miroflow_tools.py  schemas.py  test-tools.py  utils.py  websailor_tools.py
src/tools/crawler/: __init__.py  article.py  crawler.py  jina_client.py  readability_extractor.py
src/tools/tavily_search/: __init__.py  tavily_search_api_wrapper.py  tavily_search_results_with_images.py
