[project]
name = "aqa-baseline-purple-agent"
version = "1.0.0"
description = "AQA Baseline Purple Agent for AgentBeats Competition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "uvicorn>=0.38.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "transformers>=4.40.0",
    "tiktoken>=0.6.0",
    "google-search-results>=2.4.2",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "tavily-python>=0.3.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "httpx>=0.28.0",
    "markdownify>=0.11.0",
    "readabilipy>=0.2.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
